--- a/references.bib
+++ b/references.bib
@@ -106,3 +106,294 @@ note = {PASJ, in prep.},
 year = {2017}
 }
 
+    @article{symmetry,
+       author = {{Dieleman}, S. and {De Fauw}, J. and {Kavukcuoglu}, K.},
+        title = "{Exploiting Cyclic Symmetry in Convolutional Neural Networks}",
+      journal = {International Conference on Machine Learning (ICML)},
+         year = 2016,
+    }
+
+    @article{Fukushima1980,
+    author="Fukushima, Kunihiko",
+    title="Neocognitron: A self-organizing neural network model for a mechanism of pattern recognition unaffected by shift in position",
+    journal="Biological Cybernetics",
+    year="1980",
+    volume="36",
+    number="4",
+    pages="193--202",
+    issn="1432-0770",
+    doi="10.1007/BF00344251",
+    url="http://dx.doi.org/10.1007/BF00344251"
+    }
+    @article{Lecun1998, 
+    author={Y. Lecun and L. Bottou and Y. Bengio and P. Haffner}, 
+    journal={Proceedings of the IEEE}, 
+    title={Gradient-based learning applied to document recognition}, 
+    year={1998}, 
+    volume={86}, 
+    number={11}, 
+    pages={2278-2324}, 
+    keywords={backpropagation;convolution;multilayer perceptrons;optical character recognition;2D shape variability;GTN;back-propagation;cheque reading;complex decision surface synthesis;convolutional neural network character recognizers;document recognition;document recognition systems;field extraction;gradient based learning technique;gradient-based learning;graph transformer networks;handwritten character recognition;handwritten digit recognition task;high-dimensional patterns;language modeling;multilayer neural networks;multimodule systems;performance measure minimization;segmentation recognition;Character recognition;Feature extraction;Hidden Markov models;Machine learning;Multi-layer neural network;Neural networks;Optical character recognition software;Optical computing;Pattern recognition;Principal component analysis}, 
+    doi={10.1109/5.726791}, 
+    ISSN={0018-9219}, 
+    month={Nov},}
+    @article{norm_prop,
+       author = {{Arpit}, D. and {Zhou}, Y. and {Kota}, B.~U. and {Govindaraju}, V.},
+        title = "{Normalization Propagation: A Parametric Technique for Removing Internal Covariate Shift in Deep Networks}",
+      journal = {International Conference on Machine Learning (ICML)},
+     keywords = {Statistics - Machine Learning, Computer Science - Learning},
+         year = 2016,
+    }
+    @article{batch_norm,
+       author = {{Ioffe}, S. and {Szegedy}, C.},
+        title = "{Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}",
+      journal = {Journal of Machine Learning Research},
+         year = 2015,
+        month = feb,
+    }
+    @article{adam,
+       author = {{Kingma}, D.~P. and {Ba}, J.},
+        title = "{Adam: A Method for Stochastic Optimization}",
+      journal = {International Conference on Learning Representations},
+         year = 2015,
+    }
+    @article{dropout,
+        author  = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and Ilya Sutskever and Ruslan Salakhutdinov},
+        title   = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+        journal = {Journal of Machine Learning Research},
+        year    = {2014},
+        volume  = {15},
+        pages   = {1929-1958},
+    }
+
+@ARTICLE{2014MNRAS.445.1954P,
+   author = {{Petkova}, M. and {Metcalf}, R.~B. and {Giocoli}, C.},
+    title = "{GLAMER - II. Multiple-plane gravitational lensing}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1312.1536},
+ keywords = {gravitational lensing: strong, gravitational lensing: weak, dark matter, large-scale structure of Universe},
+     year = 2014,
+    month = dec,
+   volume = 445,
+    pages = {1954-1966},
+      doi = {10.1093/mnras/stu1860},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.445.1954P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2014MNRAS.445.1942M,
+   author = {{Metcalf}, R.~B. and {Petkova}, M.},
+    title = "{GLAMER - I. A code for gravitational lensing simulations with adaptive mesh refinement}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1312.1128},
+ keywords = {gravitational lensing: strong, gravitational lensing: weak, gravitational lensing: micro, methods: numerical, cosmology: miscellaneous},
+     year = 2014,
+    month = dec,
+   volume = 445,
+    pages = {1942-1953},
+      doi = {10.1093/mnras/stu1859},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.445.1942M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2013MNRAS.428..778O,
+   author = {{Overzier}, R. and {Lemson}, G. and {Angulo}, R.~E. and {Bertin}, E. and 
+	{Blaizot}, J. and {Henriques}, B.~M.~B. and {Marleau}, G.-D. and 
+	{White}, S.~D.~M.},
+    title = "{The Millennium Run Observatory: first light}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1206.6923},
+ keywords = {astronomical data bases: miscellaneous, galaxies: clusters: general, galaxies: evolution, cosmology: observations, cosmology: theory, large-scale structure of Universe},
+     year = 2013,
+    month = jan,
+   volume = 428,
+    pages = {778-803},
+      doi = {10.1093/mnras/sts076},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.428..778O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+
+@article{scikit-image,
+ title = {scikit-image: image processing in {P}ython},
+ author = {van der Walt, {S}t\'efan and {S}ch\"onberger, {J}ohannes {L}. and
+           {Nunez-Iglesias}, {J}uan and {B}oulogne, {F}ran\c{c}ois and {W}arner,
+           {J}oshua {D}. and {Y}ager, {N}eil and {G}ouillart, {E}mmanuelle and
+           {Y}u, {T}ony and the scikit-image contributors},
+ year = {2014},
+ month = {6},
+ keywords = {Image processing, Reproducible research, Education,
+             Visualization, Open source, Python, Scientific programming},
+ volume = {2},
+ pages = {e453},
+ journal = {PeerJ},
+ issn = {2167-8359},
+ url = {http://dx.doi.org/10.7717/peerj.453},
+ doi = {10.7717/peerj.453}
+}
+
+@book{vapnik79estimation,
+  abstract = {more basis, english translation by Springer Verlag, NY, 1982},
+  added-at = {2007-09-05T18:37:16.000+0200},
+  address = {USSR},
+  author = {Vapnik, V. N.},
+  biburl = {http://www.bibsonomy.org/bibtex/2069fb1845639ed6b60fca7449f211a5b/sb3000},
+  interhash = {2b5bc3316bf57027aaa9a32505ea0a4c},
+  intrahash = {069fb1845639ed6b60fca7449f211a5b},
+  keywords = {learning-theory svm kernel},
+  publisher = {Nauka},
+  timestamp = {2010-10-07T14:13:57.000+0200},
+  title = {Estimation of Dependences Based on Empirical Data [in Russian]},
+  year = 1979
+}
+
+
+@Article{Cortes1995,
+author="Cortes, Corinna
+and Vapnik, Vladimir",
+title="Support-Vector Networks",
+journal="Machine Learning",
+year="1995",
+volume="20",
+number="3",
+pages="273--297",
+abstract="The support-vector network is a new learning machine for two-group classification problems. The machine conceptually implements the following idea: input vectors are non-linearly mapped to a very high-dimension feature space. In this feature space a linear decision surface is constructed. Special properties of the decision surface ensures high generalization ability of the learning machine. The idea behind the support-vector network was previously implemented for the restricted case where the training data can be separated without errors. We here extend this result to non-separable training data.",
+issn="1573-0565",
+doi="10.1023/A:1022627411411",
+url="http://dx.doi.org/10.1023/A:1022627411411"
+}
+
+
+@Article{Burges1998,
+author="Burges, Christopher J.C.",
+title="A Tutorial on Support Vector Machines for Pattern Recognition",
+journal="Data Mining and Knowledge Discovery",
+year="1998",
+volume="2",
+number="2",
+pages="121--167",
+abstract="The tutorial starts with an overview of the concepts of VC dimension and structural risk minimization. We then describe linear Support Vector Machines (SVMs) for separable and non-separable data, working through a non-trivial example in detail. We describe a mechanical analogy, and discuss when SVM solutions are unique and when they are global. We describe how support vector training can be practically implemented, and discuss in detail the kernel mapping technique which is used to construct SVM solutions which are nonlinear in the data. We show how Support Vector machines can have very large (even infinite) VC dimension by computing the VC dimension for homogeneous polynomial and Gaussian radial basis function kernels. While very high VC dimension would normally bode ill for generalization performance, and while at present there exists no theory which shows that good generalization performance is guaranteed for SVMs, there are several arguments which support the observed high accuracy of SVMs, which we review. Results of some experiments which were inspired by these arguments are also presented. We give numerous examples and proofs of most of the key theorems. There is new material, and I hope that the reader will find that even old material is cast in a fresh light.",
+issn="1573-756X",
+doi="10.1023/A:1009715923555",
+url="http://dx.doi.org/10.1023/A:1009715923555"
+}
+
+
+@ARTICLE{1996A&AS..117..393B,
+   author = {{Bertin}, E. and {Arnouts}, S.},
+    title = "{SExtractor: Software for source extraction.}",
+  journal = {\aaps},
+ keywords = {METHODS: DATA ANALYSIS, TECHNIQUES: IMAGE PROCESSING, GALAXIES: PHOTOMETRY},
+     year = 1996,
+    month = jun,
+   volume = 117,
+    pages = {393-404},
+      doi = {10.1051/aas:1996164},
+   adsurl = {http://adsabs.harvard.edu/abs/1996A%26AS..117..393B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2002AJ....124..266P,
+   author = {{Peng}, C.~Y. and {Ho}, L.~C. and {Impey}, C.~D. and {Rix}, H.-W.
+	},
+    title = "{Detailed Structural Decomposition of Galaxy Images}",
+  journal = {\aj},
+   eprint = {astro-ph/0204182},
+ keywords = {Galaxies: Bulges, Galaxies: Fundamental Parameters, Galaxies: Nuclei, Galaxies: Structure, Techniques: Image Processing, Techniques: Photometric},
+     year = 2002,
+    month = jul,
+   volume = 124,
+    pages = {266-293},
+      doi = {10.1086/340952},
+   adsurl = {http://adsabs.harvard.edu/abs/2002AJ....124..266P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2014A&A...566A..63J,
+   author = {{Joseph}, R. and {Courbin}, F. and {Metcalf}, R.~B. and {Giocoli}, C. and 
+	{Hartley}, P. and {Jackson}, N. and {Bellagamba}, F. and {Kneib}, J.-P. and 
+	{Koopmans}, L. and {Lemson}, G. and {Meneghetti}, M. and {Meylan}, G. and 
+	{Petkova}, M. and {Pires}, S.},
+    title = "{A PCA-based automated finder for galaxy-scale strong lenses}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1403.1063},
+ primaryClass = "astro-ph.IM",
+ keywords = {gravitational lensing: strong, techniques: image processing, methods: data analysis, dark matter, surveys, cosmological parameters},
+     year = 2014,
+    month = jun,
+   volume = 566,
+      eid = {A63},
+    pages = {A63},
+      doi = {10.1051/0004-6361/201423365},
+   adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...566A..63J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@Book{Feichtinger98a,
+  Title                    = {{Gabor} Analysis and Algorithms},
+  Annote                   = {SIGNATUR = 741.019},
+  Editor                   = {Hans G. Feichtinger and Thomas Strohmer},
+  Keywords                 = {HIERARCHICAL METHODS wavelets},
+  Publisher                = {Birkh{\"a}user},
+  Year                     = {1998},
+  Series                   = {Applied and Numerical Harmonic Analysis},
+
+  Place                    = {Favoritenstrasse 9/4th Floor/1863}
+}
+
+@MISC{Springer-verlag97computationalmodels,
+    author = {N. Petkov and P. Kruizinga},
+    title = {Computational Models of Visual Neurons Specialised in the Detection of Periodic and Aperiodic Oriented Visual Stimuli: Bar and Grating Cells},
+    year = {1997}
+}
+
+@article {Jones1233,
+	author = {Jones, J. P. and Palmer, L. A.},
+	title = {An evaluation of the two-dimensional Gabor filter model of simple receptive fields in cat striate cortex},
+	volume = {58},
+	number = {6},
+	pages = {1233--1258},
+	year = {1987},
+	publisher = {American Physiological Society},
+	abstract = {1. Using the two-dimensional (2D) spatial and spectral response profiles described in the previous two reports, we test Daugman{\textquoteright}s generalization of Marcelja{\textquoteright}s hypothesis that simple receptive fields belong to a class of linear spatial filters analogous to those described by Gabor and referred to here as 2D Gabor filters. 2. In the space domain, we found 2D Gabor filters that fit the 2D spatial response profile of each simple cell in the least-squared error sense (with a simplex algorithm), and we show that the residual error is devoid of spatial structure and statistically indistinguishable from random error. 3. Although a rigorous statistical approach was not possible with our spectral data, we also found a Gabor function that fit the 2D spectral response profile of each simple cell and observed that the residual errors are everywhere small and unstructured. 4. As an assay of spatial linearity in two dimensions, on which the applicability of Gabor theory is dependent, we compare the filter parameters estimated from the independent 2D spatial and spectral measurements described above. Estimates of most parameters from the two domains are highly correlated, indicating that assumptions about spatial linearity are valid. 5. Finally, we show that the functional form of the 2D Gabor filter provides a concise mathematical expression, which incorporates the important spatial characteristics of simple receptive fields demonstrated in the previous two reports. Prominent here are 1) Cartesian separable spatial response profiles, 2) spatial receptive fields with staggered subregion placement, 3) Cartesian separable spectral response profiles, 4) spectral response profiles with axes of symmetry not including the origin, and 5) the uniform distribution of spatial phase angles. 6. We conclude that the Gabor function provides a useful and reasonably accurate description of most spatial aspects of simple receptive fields. Thus it seems that an optimal strategy has evolved for sampling images simultaneously in the 2D spatial and spatial frequency domains.},
+	issn = {0022-3077},
+	URL = {http://jn.physiology.org/content/58/6/1233},
+	eprint = {http://jn.physiology.org/content/58/6/1233.full.pdf},
+	journal = {Journal of Neurophysiology}
+}
+
+@inproceedings{Boser:1992:TAO:130385.130401,
+ author = {Boser, Bernhard E. and Guyon, Isabelle M. and Vapnik, Vladimir N.},
+ title = {A Training Algorithm for Optimal Margin Classifiers},
+ booktitle = {Proceedings of the Fifth Annual Workshop on Computational Learning Theory},
+ series = {COLT '92},
+ year = {1992},
+ isbn = {0-89791-497-X},
+ location = {Pittsburgh, Pennsylvania, USA},
+ pages = {144--152},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/130385.130401},
+ doi = {10.1145/130385.130401},
+ acmid = {130401},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
